# entra-access-graph-engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_FEATURES.md  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  weekly-scan.yml
crates/eagraph-cli/: Cargo.toml
crates/eagraph-cli/src/: main.rs
crates/eagraph-core/: Cargo.toml
crates/eagraph-core/src/: chain_detector.rs  edge_analyzer.rs  exporter.rs  graph_client.rs  lib.rs  model.rs  node_builder.rs  risk_scorer.rs
docs/: azure_integration.md
examples/: sample_graph.json  sample_risk_report.json
