[package]
name = "eagraph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
